--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.1",
     "@reduxjs/toolkit": "^2.9.2",
+    "@types/jest": "29.5.14",
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -28,9 +29,9 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
-    "babel-jest": "^30.2.0",
+    "babel-jest": "^29.7.0",
     "babel-preset-expo": "^54.0.6",
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
     "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
