--- a/server/.env
+++ b/server/.env
@@ -6,6 +6,6 @@ PORT=3000
 # MySQL configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=1234Rashmi2001#
+DB_PASSWORD="1234Rashmi2001#"
 DB_NAME=rn_takehome
 DB_PORT=3306
