--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "29.5.14",
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
@@ -29,11 +30,14 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "babel-preset-expo": "^54.0.6",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
+    "postcss": "^8.5.6",
     "react-test-renderer": "^19.1.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.9.2"
   },
   "private": true
