--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.1",
     "@reduxjs/toolkit": "^2.9.2",
@@ -18,7 +19,7 @@
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -26,17 +27,20 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
+    "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "babel-preset-expo": "^54.0.6",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
     "postcss": "^8.5.6",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "^19.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.9.2"
   },
