--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,5 +1,12 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+# Environment variables
+.env
+.env.local
+
+# Don't ignore the example file
+!.env.example
+
 # dependencies
 node_modules/
 
