--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -19,7 +19,7 @@
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
-    "react": "^19.2.0",
+    "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -30,7 +30,7 @@
     "@babel/core": "^7.24.7",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/react-redux": "^7.1.34",
@@ -40,7 +40,8 @@
     "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
     "postcss": "^8.5.6",
-    "react-test-renderer": "^19.2.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-test-renderer": "19.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.9.2"
   },
