--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -40,9 +40,10 @@
     "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
     "postcss": "^8.5.6",
+    "react-native-css-transformer": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
   "private": true
