--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,14 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.19",
-    "@react-navigation/stack": "^7.6.1",
+    "@react-navigation/stack": "^7.6.2",
     "@reduxjs/toolkit": "^2.9.2",
     "@types/jest": "29.5.14",
     "expo": "~54.0.20",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
