--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "expo-device": "~8.0.9",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
