--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,12 @@
-# .env.example
+# .env for Development
 # API Configuration
 # Replace with your computer's IP address
 API_URL=http://YOUR_IP_HERE:3000
 
 # Socket Configuration
 SOCKET_URL=http://YOUR_IP_HERE:3000
+
+
+# .env for Production
+# API_URL=http://13.60.226.207:3000
+# SOCKET_URL=http://13.60.226.207:3000
